Clarify device offline push notification

--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -1626,6 +1626,9 @@ msgstr ""
 msgid "Blocking all connections"
 msgstr ""
 
+msgid "Blocking internet (device offline)"
+msgstr ""
+
 msgid "Copied Mullvad account number to clipboard"
 msgstr ""
 
