--- a/android/app/src/main/res/values-da/strings.xml
+++ b/android/app/src/main/res/values-da/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="account_created">Konto oprettet</string>
-    <string name="account_credit_expires_in_a_few_minutes">Kontokredit udløber om få minutter</string>
+    <string name="account_credit_expired_notification">Kontoen er udløbet</string>
+    <string name="account_credit_expires_in_app_reminder">%1$s. Køb mere kredit.</string>
+    <string name="account_credit_expires_notification">Kontokredit udløber om %1$s. Køb mere kredit.</string>
     <string name="account_credit_expires_soon">Kontokredit udløber snart</string>
     <string name="account_credit_has_expired">Du har ikke mere VPN-tid tilbage på denne konto.</string>
     <string name="account_number">Kontonummer</string>
