--- a/android/app/src/main/res/values-ja/strings.xml
+++ b/android/app/src/main/res/values-ja/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="account_created">アカウントを作成しました</string>
-    <string name="account_credit_expires_in_a_few_minutes">アカウントのクレジットが数分後に無効になります</string>
+    <string name="account_credit_expired_notification">アカウントが時間切れです</string>
+    <string name="account_credit_expires_in_app_reminder">%1$s。追加クレジットを購入してください。</string>
+    <string name="account_credit_expires_notification">アカウントクレジットは %1$sで期限切れになります。追加クレジットを購入。</string>
     <string name="account_credit_expires_soon">アカウントのクレジットがもうすぐ無効になります</string>
     <string name="account_credit_has_expired">このアカウントには、もう残っているVPN時間がありません。</string>
     <string name="account_number">アカウント番号</string>
