--- a/android/app/src/main/res/values-ko/strings.xml
+++ b/android/app/src/main/res/values-ko/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="account_created">계정 생성됨</string>
-    <string name="account_credit_expires_in_a_few_minutes">계정 크레딧이 몇 분 후에 만료됨</string>
+    <string name="account_credit_expired_notification">계정 시간 초과</string>
+    <string name="account_credit_expires_in_app_reminder">%1$s. 추가 크레딧을 구매하세요.</string>
+    <string name="account_credit_expires_notification">계정 크레딧이 %1$s 후에 만료됩니다. 추가 크레딧을 구매하세요.</string>
     <string name="account_credit_expires_soon">계정 크레딧이 곧 만료됨</string>
     <string name="account_credit_has_expired">이 계정에 더 이상 VPN 시간이 없습니다.</string>
     <string name="account_number">계정 번호</string>
