--- a/android/app/src/main/res/values-th/strings.xml
+++ b/android/app/src/main/res/values-th/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="account_created">สร้างบัญชีแล้ว</string>
-    <string name="account_credit_expires_in_a_few_minutes">เครดิตของบัญชีจะหมดอายุในอีกไม่กี่นาที</string>
+    <string name="account_credit_expired_notification">บัญชีหมดเวลาแล้ว</string>
+    <string name="account_credit_expires_in_app_reminder">%1$s ซื้อเครดิตเพิ่ม</string>
+    <string name="account_credit_expires_notification">เครดิตบัญชีจะหมดอายุใน %1$s ซื้อเครดิตเพิ่ม</string>
     <string name="account_credit_expires_soon">เครดิตของบัญชีจะหมดอายุในเร็วๆ นี้</string>
     <string name="account_credit_has_expired">คุณไม่มีเวลาใช้งาน VPN เหลืออยู่ในบัญชีนี้แล้ว</string>
     <string name="account_number">หมายเลขบัญชี</string>
